changed .item in style.css file to use display and justify-content and removed flex:1, to fix alignment issues with form.

--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ main img {
 }
 
 .item {
-  flex: 1;
-  margin:10px;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .item-double {
@@ -99,6 +100,7 @@ form {
 
 form label {
   font-weight: bold;
+  
 }
 
 form select,
@@ -166,7 +168,7 @@ footer p {
   , .item button{
     display: flex;
     width: 100%;
-    flex: 1;
+    justify-content: space-between;
   }
 
   .grid-column {
